--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -498,6 +498,8 @@ http://www.templatemo.com/tm-515-eatery
   }
 
   .team-thumb img {
+   width: 100%;
+   height: 72vh;
     transition: 0.5s 0.2s;
   }
 
@@ -560,7 +562,7 @@ http://www.templatemo.com/tm-515-eatery
 
   .menu-thumb img {
     width: 100%;
-    height: 58vh;
+    height: 59vh;
     transition: 0.5s;
   }
 
